# oc_sdwan_agent

./: AGENTS.md  README.md  alarms.json  certificates.json  controllers.csv  devices.json  opencode.json  pyproject.toml  requirements.txt  sdwan_health_report_20260416_124107.json  sdwan_health_summary_20260416_124118.txt  state.json
agents/: sdwan-architect.md  sdwan-operator.md  sdwan-troubleshooter.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DAILY_WORKFLOWS.md  DEPLOYMENT.md  EXTENDING.md  MCP_SERVER_GUIDE.md  SASTRE_INTEGRATION.md
examples/: sample_queries.md  sample_workflows.md
reports/: ai_sections.json  ai_sections_autogen_20260414_101514.json  sdwan_controller_vmanage_10.10.1.1_20260414_005548.md  sdwan_controller_vmanage_10.10.1.1_20260414_011832.md  sdwan_controller_vmanage_10.10.1.1_20260414_101514.md  sdwan_controller_vmanage_20260414_005154.md
skills/alarm-correlation/: SKILL.md
skills/backup-restore/: SKILL.md
skills/capacity-planning/: SKILL.md
skills/centralized-control-policy/: SKILL.md
skills/centralized-data-policy/: SKILL.md
skills/certificate-management/: SKILL.md
skills/control-plane/: SKILL.md
skills/control-plane-issues/: SKILL.md
skills/daily-health-check/: SKILL.md
skills/data-plane/: SKILL.md
skills/data-plane-issues/: SKILL.md
skills/ips-ids/: SKILL.md
skills/localized-policy/: SKILL.md
skills/management-plane/: SKILL.md
skills/onboarding-issues/: SKILL.md
skills/orchestration-plane/: SKILL.md
skills/policy-issues/: SKILL.md
skills/sdwan-troubleshooting/: SKILL.md
skills/segmentation/: SKILL.md
skills/url-filtering/: SKILL.md
skills/zbfw/: SKILL.md
src/: __init__.py  collector.py  config.py  generate_health_report.py  inventory.py  mcp_server.py  report_generator.py  sastre_runner.py  vmanage_client.py
src/analyzers/: __init__.py  alarm_correlator.py  bfd_analyzer.py  control_analyzer.py  legacy_analyzer.py  risk_scorer.py
src/tools/: __init__.py  alarm_tools.py  certificate_tools.py  control_plane_tools.py  data_plane_tools.py  inventory_tools.py  policy_tools.py  sastre_tools.py  upgrade_tools.py  workflow_tools.py
src/workflows/: __init__.py  change_validator.py  incident_triage.py  morning_health_check.py  site_onboarder.py  upgrade_planner.py
