[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdwan-ai"
version = "0.1.0"
description = "CCIE-grade AI sidekick for Cisco SD-WAN operations via MCP (FastMCP)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
  {name = "SD-WAN AI Team", email = "sdwan-ai@example.com"}
]
keywords = ["sdwan", "cisco", "vmanage", "mcp", "fastmcp", "ai", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"

dependencies = [
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "mcp>=1.2.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
  "tabulate>=0.9.0",
  "fastmcp>=0.1.0",
  "aiohttp>=3.9.0",
  "httpx>=0.24.0",
  "pandas>=2.0.0",
  "typer>=0.12.0",
  "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
]
docs = [
  "sphinx>=7.0.0",
  "sphinx-rtd-theme>=1.3.0",
]
sastre = [
  "sastre-pro>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/example/sdwan-ai"
Documentation = "https://sdwan-ai.readthedocs.io"
Repository = "https://github.com/example/sdwan-ai.git"
Issues = "https://github.com/example/sdwan-ai/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore = ["E501"]  # Line too long (handled by black)
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  ".venv",
  ".tox",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = [
  "tests",
  "venv",
  ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "*/tests/*",
  "*/__main__.py",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
